tests/invalid/min_mismatched_types/main.py
x: int = 1
y: float = 2.0
z: int = min(x, y)
